@@ -18,19 +18,20 @@ public class FCFS {
                 for (int j=0; j<database.getNumberOfProcesses(); j++) {
                     if (database.getMainArray()[i][j].getMomentOfNotification() <= currentMoment
                             && !tempArray.contains(database.getMainArray()[i][j])
-                            && !garbageArray.contains(database.getMainArray()[i][j]))
+                            && !garbageArray.contains(database.getMainArray()[i][j])) {
                         tempArray.add(database.getMainArray()[i][j]);
+                    }
                 }
 
-                if (tempArray.size() != 0) {
+                if (!tempArray.isEmpty()) {
 
                     tempArray.sort(new SortByMomentOfNotification());
 
-                    tempArray.get(0).setWaitingTime(currentMoment-tempArray.get(0).getMomentOfNotification());
-                    currentMoment += tempArray.get(0).getPhaseLength();
-                    tempArray.get(0).setPhaseLength(0);
-                    garbageArray.add(tempArray.get(0));
-                    tempArray.remove(0);
+                    tempArray.getFirst().setWaitingTime(currentMoment-tempArray.getFirst().getMomentOfNotification());
+                    currentMoment += tempArray.getFirst().getPhaseLength();
+                    tempArray.getFirst().setPhaseLength(0);
+                    garbageArray.add(tempArray.getFirst());
+                    tempArray.removeFirst();
                 }
                 else {
                     currentMoment++;
