@@ -18,24 +18,26 @@ public class SJF {
                 for (int j=0; j<database.getNumberOfProcesses(); j++) {
                     if (database.getMainArray()[i][j].getMomentOfNotification() <= currentMoment
                             && !tempArray.contains(database.getMainArray()[i][j])
-                            && !garbageArray.contains(database.getMainArray()[i][j]))
+                            && !garbageArray.contains(database.getMainArray()[i][j])) {
                         tempArray.add(database.getMainArray()[i][j]);
+                    }
                 }
 
-                if (tempArray.size() != 0) {
+                if (!tempArray.isEmpty()) {
 
                     tempArray.sort(new SortByPhaseLength());
 
-                    tempArray.get(0).setWaitingTime(currentMoment-tempArray.get(0).getMomentOfNotification());
+                    tempArray.getFirst().setWaitingTime(currentMoment-tempArray.getFirst().getMomentOfNotification());
 
-                    int currentPhaseLength = tempArray.get(0).getPhaseLength();
+                    int currentPhaseLength = tempArray.getFirst().getPhaseLength();
                     currentMoment += currentPhaseLength;
 
-                    for (int j=1; j<tempArray.size(); j++)
-                        tempArray.get(j).setWaitingTime(currentMoment-tempArray.get(j).getMomentOfNotification());
+                    for (int j=1; j<tempArray.size(); j++) {
+                        tempArray.get(j).setWaitingTime(currentMoment - tempArray.get(j).getMomentOfNotification());
+                    }
 
-                    garbageArray.add(tempArray.get(0));
-                    tempArray.remove(0);
+                    garbageArray.add(tempArray.getFirst());
+                    tempArray.removeFirst();
                 }
                 else {
                     currentMoment++;
