@@ -18,22 +18,24 @@ public class SRTF {
                 for (int j=0; j<database.getNumberOfProcesses(); j++) {
                     if (database.getMainArray()[i][j].getMomentOfNotification() <= currentMoment
                             && !tempArray.contains(database.getMainArray()[i][j])
-                            && !garbageArray.contains(database.getMainArray()[i][j]))
+                            && !garbageArray.contains(database.getMainArray()[i][j])) {
                         tempArray.add(database.getMainArray()[i][j]);
+                    }
                 }
 
-                if (tempArray.size() != 0) {
+                if (!tempArray.isEmpty()) {
 
                     tempArray.sort(new SortByPhaseLength());
 
-                    tempArray.get(0).setPhaseLength(tempArray.get(0).getPhaseLength()-1);
+                    tempArray.getFirst().setPhaseLength(tempArray.getFirst().getPhaseLength()-1);
 
-                    for (int j=1; j<tempArray.size(); j++)
-                        tempArray.get(j).setWaitingTime(tempArray.get(j).getWaitingTime()+1);
+                    for (int j=1; j<tempArray.size(); j++) {
+                        tempArray.get(j).setWaitingTime(tempArray.get(j).getWaitingTime() + 1);
+                    }
 
-                    if (tempArray.get(0).getPhaseLength() == 0) {
-                        garbageArray.add(tempArray.get(0));
-                        tempArray.remove(0);
+                    if (tempArray.getFirst().getPhaseLength() == 0) {
+                        garbageArray.add(tempArray.getFirst());
+                        tempArray.removeFirst();
                     }
                 }
                 currentMoment++;
